# AI-Research-Orchestrator

./: .claudeignore  .gitignore  .pre-commit-config.yaml  AUTO_REVIEW.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  REVIEW_STATE.json  SKILL.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json  settings.schema.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  format.yml
agents/: codex-mcp.yaml  openai.yaml
agents/adviser/: AGENT.md
agents/coder/: AGENT.md
agents/critic/: AGENT.md
agents/curator/: AGENT.md
agents/orchestrator/: AGENT.md
agents/reflector/: AGENT.md
agents/reviewer/: AGENT.md
agents/survey/: AGENT.md
agents/writer/: AGENT.md
assets/prompts/: adviser.md.tmpl  code.md.tmpl  critic.md.tmpl  curator.md.tmpl  orchestrator.md.tmpl  paper-writer.md.tmpl  project-takeover.md.tmpl  reflector.md.tmpl  reviewer-editor.md.tmpl  (+2 more)
commands/: README.md  abandon.md  configure.md  init-research.md  insight.md  pivot.md  post-submission.md  reflect.md  reload.md  run-experiments.md  run-pilot.md  run-survey.md  status.md  write-paper.md
docs/: ARIS_INTEGRATION_PLAN.md  directory-structure-design.md  scripts-restructure-design.md  skill-gap-analysis.md
hooks/: hooks.json
references/: README.md  agent-pairings.md  agent-roles.md  ai-researcher-agent-mapping.md  citation-authenticity.md  citation-standards.md  citation_standards.md  critical-thinking.md  database_search_strategies.md  deliverable-contracts.md  evidence-rules.md  evidence-standards.md  experiment-integrity.md  gate-rubrics.md  integration-guide.md  intent-clarification-protocol.md  literature-verification.md  orchestrator-protocol.md  paper-quality-assurance.md  paper-writing-guide.md  phase-execution-details.md  pivot-policy.md  progress-visualization.md  project-takeover-protocol.md  prompt-customization.md  recovery-and-evolution.md  remote-execution.md  reporting_standards.md  role-protocols.md  rollback-policy.md  runtime-design-document.md  scientific-method.md  scientific-rigor.md  self-evolution.md  self-healing.md  sibyl-inspired-runtime-plan.md  skill-dependency-graph.md  statistical-reporting.md  system-architecture.md  system-evaluation-rubrics.md  (+4 more)
scripts/: __init__.py  analyze_project.py  apply_overlay.py  audit_system.py  battle_protocol.py  bump_version.py  config_io.py  configure_project.py  exceptions.py  generate_dashboard.py  generate_statusline.py  gitmem.py  gpu_manager.py  init_research_project.py  init_wizard.py  intent_clarification.py  legacy_handler.py  materialize_templates.py  migrate_project.py  migrate_structure.py  orchestrator_common.py  phase_handoff.py  phase_rollback.py  pivot_manager.py  preflight.py  prompts.py  quality_gate.py  recover_stage.py  reload_project.py  render_agent_prompt.py  run_citation_audit.py  run_insight.py  run_remote_job.py  run_stage_loop.py  run_status.py  schedule_jobs.py  sentinel.py  show_version.py  state_manager.py  state_migrator.py  (+7 more)
skills/: README.md
tests/: conftest.py  test_analyze_project.py  test_apply_overlay.py  test_aris_state.py  test_audit_system.py  test_citation_audit.py  test_configure_project.py  test_exceptions.py  test_fetch_verified_bibtex.py  test_folder_structure.py  test_gate_audit.py  test_generate_dashboard.py  test_generate_statusline.py  test_gitmem.py  test_gpu_manager.py  test_hooks.py  test_init_research_project.py  test_init_wizard.py  test_insight.py  test_integration_gate_chain.py  test_intent_clarification.py  test_latex_citation_curator.py  test_legacy_handler.py  test_materialize_templates.py  test_migrate_structure.py  test_phase_handoff.py  test_phase_rollback.py  test_phases_naming.py  test_pivot_manager.py  test_preflight.py  test_project_config.py  test_project_migration.py  test_prompts.py  test_quality_gate.py  test_reload_project.py  test_render_agent_prompt.py  test_run_stage_loop.py  test_run_status.py  test_runtime_jobs.py  test_score_papers.py  (+12 more)
(+214 files in other folders)
